--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cisc367project",
   "version": "0.1.0",
-  "homepage": "https://mjcarr458.github.io/cisc367project",
+  "homepage": "http://mjcarr458.github.io/cisc367project",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
