--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,8 +34,6 @@ jobs:
                   field: homepage
                   value: ${{ steps.get-repo-values.outputs.url }}
             - run: npm ci
-            - run: npm run lint
-            - run: npm run test -- --coverage |& tee ./public/test_report.txt
             - run: echo "<html><head><meta http-equiv='refresh' content='0; URL=${{github.server_url}}/${{github.repository}}' /></head><body>Redirecting to repository</body></html>" > ./public/github.html
             - run: npm run build --if-present
 
@@ -43,7 +41,7 @@ jobs:
               run: |
                   git config --global user.name ${user_name}
                   git config --global user.email ${user_email}
-                  git remote set-url origin https://${github_token}@github.com/${repository}
+                  git remote set-url origin https://${vscode}@github.com/${repository}
                   npm run deploy
               env:
                   user_name: "github-actions[bot]"
